xx.xx.2004 - v0.9 
- $template_id in site.var is saved with quotes(") (ddrees)
- usage of logo is now optional (ddrees)

16.10.2004 - Baseline